add env to ensure github can find the correct secret

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,7 @@ jobs:
     needs: [changes, static-analysis]
     if: needs.changes.outputs.infra == 'true'
     runs-on: ubuntu-latest
+    environment: prod
     permissions:
       pull-requests: write
     steps:
