--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -71,10 +71,12 @@ jobs:
         with:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
+      - name: Terraform Init
+        run: terraform init
+
       - name: Fetch Environment Variables
         id: vars
         run: |
-          terraform init
           # These always fetch current state, so SITE_URL is never empty
           echo "BUCKET_NAME=$(terraform output -raw s3_bucket_id)" >> $GITHUB_ENV
           echo "DIST_ID=$(terraform output -raw cloudfront_distribution_id)" >> $GITHUB_ENV
