--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -17,8 +17,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Fetch LinkedIn URL
+      
+      - name: Fetch Dynamic Data
         id: data
         run: |
           # Use the GitHub API with the built-in token to avoid rate limits
@@ -26,7 +26,7 @@ jobs:
           
           # Fallback for empty social accounts
           echo "LINKEDIN_URL=${LINKEDIN:-'#'}" >> $GITHUB_ENV
-      
+
       - name: Generate README from Template
         run: |
           if [ ! -f README.template.md ]; then
@@ -34,15 +34,11 @@ jobs:
             exit 1
           fi
 
-          REPO_URL="${{ github.server_url }}/${{ github.repository }}"
-          REPO_NAME="${{ github.repository }}"
-
-          # Replace placeholders in the template
-          sed -i "s|{{REPO_NAME}}|$REPO_NAME|g" README.template.md
-          sed -i "s|{{REPO_URL}}|$REPO_URL|g" README.template.md
-          sed -i "s|{{LINKEDIN_URL}}|$LINKEDIN|g" README.template.md
-          
-          mv README.template.md README.md
+          # Use a different delimiter in sed (like |) to handle URLs containing slashes
+          sed -e "s|{{REPO_NAME}}|${{ github.event.repository.name }}|g" \
+              -e "s|{{REPO_URL}}|${{ github.event.repository.html_url }}|g" \
+              -e "s|{{LINKEDIN_URL}}|${{ env.LINKEDIN_URL }}|g" \
+              README.template.md > README.md
           
       - name: Commit and Push Changes
         run: |
