--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,55 +2,62 @@ name: "Update Documentation"
 on:
   push:
     branches: [ main ]
-    paths: 
-      - 'README.template.md'       # Trigger when you change the layout
-      - '**.tf'                    # Trigger when infrastructure outputs change
-      - '.github/workflows/update-readme.yml' # Trigger when you fix the script
-  workflow_dispatch: # Allows you to still run it manually for testing
+    paths:
+      - 'README.template.md'
+      - '**.tf'
+      - '.github/workflows/update-readme.yml'
+  workflow_dispatch:
 
 jobs:
   update-docs:
     runs-on: ubuntu-latest
-    # Added permissions to ensure the GITHUB_TOKEN can push the changes back
     permissions:
-      contents: write 
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
-      - name: Fetch Dynamic Data
-        id: data
-        run: |
-          # Use the GitHub API with the built-in token to avoid rate limits
-          LINKEDIN=$(curl -s https://api.github.com/users/${{ github.repository_owner }}/social_accounts | jq -r '.[] | select(.url | contains("linkedin.com")) | .url')
-          
-          # Fallback for empty social accounts
-          echo "LINKEDIN_URL=${LINKEDIN:-'#'}" >> $GITHUB_ENV
+        with:
+          # Use persist-credentials to ensure the token is available for the push
+          persist-credentials: true
+          # Ensure we check out the actual branch, not a detached HEAD
+          ref: ${{ github.head_ref || github.ref_name }}
 
+      # Build README from Template
       - name: Generate README from Template
         run: |
-          if [ ! -f README.template.md ]; then
-            echo "❌ Error: README.template.md not found"
-            exit 1
-          fi
-
-          # Use a different delimiter in sed (like |) to handle URLs containing slashes
           sed -e "s|{{REPO_NAME}}|${{ github.event.repository.name }}|g" \
               -e "s|{{REPO_URL}}|${{ github.event.repository.html_url }}|g" \
-              -e "s|{{LINKEDIN_URL}}|${{ env.LINKEDIN_URL }}|g" \
               -e "s|{{GITHUB_USER}}|${{ github.repository_owner }}|g" \
               README.template.md > README.md
-          
+
+      # Inject Terraform technical details into the newly created README.md
+      - name: Render terraform docs
+        uses: terraform-docs/gh-actions@v1.4.1
+        with:
+          working-dir: .
+          output-file: README.md
+          output-method: inject
+
+      # Format README using Prettier
+      - name: Format README
+        run: npx prettier --write README.md
+
+      # Commit and Push with improved error handling
       - name: Commit and Push Changes
         run: |
+          # CRITICAL: Reclaim ownership of all files from 'root' to 'runner'
+          sudo chown -R $USER:$USER .
+
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          
+
+          # Mark the directory as safe for the current user
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
+
           git add README.md
-          # Standard practice: check for changes before committing
           if git diff --staged --quiet; then
             echo "No changes to README.md"
           else
             git commit -m "docs: automated readme update [skip ci]"
-            git push
+            git push origin main
           fi
