fix checkov errors

--- a/.checkov.yml
+++ b/.checkov.yml
@@ -31,5 +31,9 @@ skip-check:
   - CKV2_AWS_62 # Ensure S3 buckets should have event notifications enabled (Irrelevant)
   - CKV_AWS_144 # Ensure that S3 bucket has cross-region replication enabled (Prevents doubling storage costs)
 
+  # Cloudwatch-specific skips
+  - CKV_AWS_158 # Ensure that CloudWatch Log Group is encrypted by KMS (Avoid KMS cost)
+  - CKV_AWS_338 # Ensure CloudWatch log groups retains logs for at least 1 year (Not necessary and save cost)
+
   # GitHub Action skips
   - CKV2_GHA_1 # Ensure top-level permissions are not set to write-all (Intentional skip as the workflows requires the permission)
